--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Configurations
-title:            《台灣俗語鹹酸甜第2冊》
+title:            Sió-tâi sī Niau-tāu
 longtitle:        Tâi-oân Sio̍k-gí Kiâm-sng-tiⁿ (台灣俗語鹹酸甜)
 author:           Siau Lah-jih
-email:            tzuhua818@gmail.com
+email:            cynthia0121@gmail.com
 description: >
   Build Jekyll site with the GitBook style.
 
